Wed Feb 25 11:02:37 CET 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * installdir/*.[1,8]: added man pages (htdig-pdfparser.1, htdig.1,
      htdump.1, htfuzzy.1, htload.1, htmerge.1, htnotify.1, htpurge.1,
      htsearch.1, htstat.1, rundig.1, htdigconfig.8) provided by
      Robert Ribnitz <ribnitz@linuxbourg.ch> of the Debian Project
    * installdir/Makefile.am: prepared the automake script for correctly
      handling the man pages

Sat 21 Feb 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * htsearch/htsearch.cc:
      Back out change of 21 December, as it causes problems with characters
      which *should* be unencded, like  /

Thu 19 Feb 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * aclocal.m4, acinclude.m4, configure.in:
      Remove duplicate tests for  zlib
      Fix tests for SSL  (Fixes bug #829081)
      Fix  configure --help  formatting

    * htdoc/*.[18].in, htdoc/Makefile.am, configure.in: Added man pages

    * htdoc/attrs.html.in, htdoc/cf_generate.pl, htdoc/Makefile.am:
      Fill in #define'd attribs  (Fixes bug #692125)

    * test/Makefile.am: Incorporate new tests in  make check

    * test/t_htdig, test/t_parsing: suppress unwanted diagnostics

    * STATUS: list Cygwin bug (#814268)

    * htcommon/default.cc:
      added wordlist_cache_inserts, remove worlist_cache_dirty_level

    * configure, */Makefile.in, */Makefile, htdoc/cf_by{name,prog}.html:
      regenerated

Fri 13 Feb 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * db/mp_cmpr.c: Fix bug with  --without-zlib

Sun 8 Feb 2004 Lachlan Andrew <lha at users.sourceforge.net>

    * htcommon/URL.cc: Make server_alias case insensitive.

    * htdig/Document.cc: Don't hex-decode twice.  (Caused problems with names
      like  file%20name)

    * htdig/Retriever.cc: Test validity of URL value *before* calling
      signature(), as that implictly normalises, and confuses
      limit_normalised vs limit_urls_to
