@@ -77,6 +77,7 @@
 <li>Alexis Mikhailov for contributing better support for local filesystem indexing.</li>
 <li>Hanno Mueller for script_name patch and examples.</li>
 <li>Klaus Mueller for working out a Win32 port using CygWin.</li>
+<li>Marco Nenciarini for the new autotools support and the conditional removal of deprecated include files.</li>
 <li>Hans-Peter Nilsson for many bug fixes and other contributions.</li>
 <li>Tobias Oetiker for fixes to the timeout system.</li>
 <li>Jesse op den Brouw for the DB2 backend and survey and the parse_word_doc script.</li>
@@ -84,6 +85,7 @@
 <li>Arthur Prokosch for fixing problems with phrase searching.</li>
 <li>William Rhee for improving support with multiple excludes and restricts</li>
 <li>Jacques Reynes for updates to the whatsnew script.</li>
+<li>Robert Ribnitz and the Debian Project for maintaining the <em>man</em> pages.</li>
 <li>Chris-Jason Richards for fixing htnotify under sendmail.</li>
 <li>Phillippe Rochat for fixing whitespace detection in config files.</li>
 <li><a href="author.html">Andrew Scherpbier</a> for being the original author and leading the project.</li>
@@ -92,10 +94,9 @@
 <li>Jan Sorensen for allowing parsing of 8-bit text without compiler options.</li>
 <li>Sylvain Wallez for the PDF parser.</li>
 <li>Randy Winch for contributing zlib document compression.</li>
-<li>Marco Nenciarini for the new autotools support and the conditional removal of deprecated include files.</li>
 <li>And many others who made bug reports and suggested changes to the code!</li>
 	  </ul>
 	<hr size="4" noshade>
-		Last modified: $Date: 2003/11/09 02:56:23 $
+		Last modified: $Date: 2004/02/25 10:10:05 $
   </body>
 </html>
