@@ -1,3 +1,8 @@
+Wed Feb 25 11:14:45 CET 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>
+
+    * htdocs/THANKS.html: added Robert Ribnitz to the 'thanks' page and fixed
+      Nenciarini's position (it was not in alphabetical order - sorry!).
+
 Wed Feb 25 11:02:37 CET 2004 Gabriele Bartolini <angusgb@users.sourceforge.net>
 
     * installdir/*.[1,8]: added man pages (htdig-pdfparser.1, htdig.1,
